Second/last submission A4

--- a/homework_4/products.html
+++ b/homework_4/products.html
@@ -29,7 +29,7 @@
 
 <div class="responsive">
   <div >
-    <a target="_blank">
+    <a target="_blank" href="product_detail2.html">
       <img src="images/Product%202.jpg" alt="Product 2" width="600" height="400">
     </a>
   </div>
