--- a/week7_lab/index.html
+++ b/week7_lab/index.html
@@ -1,12 +1,12 @@
-
 <!doctype html>
 <html>
     <head>
         <title>Zookeeper</title>
-        <!-- style -->
+
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Pacifico" rel="stylesheet">
         <!-- javascript -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="animals.js" type="text/javascript"></script>
+        <script src="main.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -17,6 +17,10 @@
                 <h1 id="animal-properties"></h1>
                 <img id="animal-img" src="">
             </div>
+
+            <button id="button-storage"></button>
+            <p id="button-action-text"></p>
+            
         </div>
     </body>
 </html>
