--- a/homework_5/list.html
+++ b/homework_5/list.html
@@ -1,61 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>To Do App</title>
+    <title>Cart</title>
+    <meta charset="utf-8"/>
     <!-- styles -->
-    <link rel="stylesheet" type="text/css" href="cart.css">
-    <!-- fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="assets/css/cart.css">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <!-- javascript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="main.js" type="text/javascript"></script>
+    <script src="assets/js/cart.js"></script>
 </head>
 
 <body>
     <!-- Top Bar -->
       <ul>
         <li class="menu-left"><a href="homepage.html">Muddy Paws</a></li>
-        <li class="menu-right" ><a href="cart.html">Cart</a></li>
+        <li class="menu-right" ><a href="list.html" id="result">Cart (0)</a></li>
         <li class="menu-right"><a href="products.html">Adventuring</a></li>
         <li class="menu-right"><a href="products.html">Dogs</a></li>
         <li class="menu-right"><a href="products.html">Hiking</a></li>
         <li class="menu-right"><a href="products.html">All</a></li>
       </ul>
 
+        <!-- Items in Shopping Cart -->
         <div id="todo-lists">
             <div class="grocery-list">
                 <div id="grocery-list">
 
                 <div class="delete-item">
                     <div> <button>X</button> </div>
-                    <div class="image"> <img src="cart_product.png" alt=""/> </div>
+                    <div class="image"> <img src="images/cart_product.png" alt=""/> </div>
                 </div>
 
                 <div class="delete-item">
                     <div> <button>X</button> </div>
-                    <div class="image"> <img src="cart_product.png" alt=""/> </div>
+                    <div class="image"> <img src="images/cart_product.png" alt=""/> </div>
                 </div>
 
                 <div class="delete-item">
                     <div> <button>X</button> </div>
-                    <div class="image"> <img src="cart_product.png" alt=""/> </div>
+                    <div class="image"> <img src="images/cart_product.png" alt=""/> </div>
                 </div>
-                <!-- 
-
-                <div class="item">
-                    <div><button class="delete-item">X</button> Cat Harness </div>
-                    <div class="image"> <img src="item-2.png" alt=""/> </div>
-                </div>
-
-                <div class="item">
-                    <div><button class="delete-item">X</button> Dog Collar </div>
-                    <div class="image"> <img src="item-2.png" alt=""/> </div>
-                </div>
-
-                -->
-
-
-
                 </div>
 
             </div>
